[workspace]
resolver = "2"
members = [
    "crates/evm-eth",
    "crates/wallet",
    "crates/policy",
    "crates/tokens",
    "crates/fee",
    "crates/x402",
    "crates/canonical",
    "crates/compression",
    "crates/index",
    "crates/verification",
    "crates/security",
    "ffi",
    "wasm",
    "pyo3",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
authors = ["AI Agent Economy <bill@ai-agent-economy.com>"]
repository = "https://github.com/up2itnow0822/clawpowers-core"

[workspace.dependencies]
# EVM / Crypto
alloy = { version = "1.8", features = ["full"] }
alloy-signer = "2.0"
alloy-signer-local = "2.0"
alloy-primitives = "1.5"

# Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.40", features = ["bundled"] }

# Crypto / Hashing
sha2 = "0.11"
rand = "0.10"
zeroize = { version = "1", features = ["derive"] }

# FFI
napi = { version = "3", features = ["napi9", "async", "serde-json"] }
napi-derive = "3"

# WASM (optional)
wasm-bindgen = "0.2"

# PyO3 (Python bindings)
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }

# Testing / Bench
criterion = { version = "0.5", features = ["html_reports"] }

# Errors
thiserror = "2"

# Logging
tracing = "0.1"

# Chrono
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }
